--- a/_posts/2020-03-13-intro.md
+++ b/_posts/2020-03-13-intro.md
@@ -6,4 +6,6 @@ style: center
 ---
 
 # Formation agile full remote
-Le confinement nous impose de repenser nos pratiques. Ce document présente la manière de donner nos formations agiles (SM, PO, Kanban, …) avec des gens totalement remote.
+Le confinement nous impose de repenser nos pratiques. Ce document dresse une proposition de la manière de donner nos formations agiles (SM, PO, Kanban, …) avec des gens totalement remote mais en mode synchrone (pas comme un MOOC ou les participants sont autonomes, à leur vitesse).
+
+Compilé par Nathaniel avec l'aide d'[Agiletribu](https://www.agiletribu.com).
