--- a/_posts/2020-03-14-outils.md
+++ b/_posts/2020-03-14-outils.md
@@ -1,6 +1,6 @@
 ---
 title: "Outils"
-bg: '#49868C'  #defined in _config.yml, can use html color like '#0fbfcf'
+bg: '#419BBF'  #defined in _config.yml, can use html color like '#0fbfcf'
 color: white   #text color
 fa-icon: toolbox
 ---
