--- a/_posts/2020-03-14-outils.md
+++ b/_posts/2020-03-14-outils.md
@@ -14,7 +14,7 @@ fa-icon: toolbox
 
 * Pédagogique :
     * [**Klaxoon**](https://klaxoon.com) : Brainstorm, question, quizz
-    * [**Draft**](https://draft.do) : Un mur de travail synchronisé (postit, ligne, …)
+    * [**Draft**](https://draft.io) : Un mur de travail synchronisé (postit, ligne, …)
 
 * Outils de travail :
     * [**Google docs**](https://docs.google.com) 
