--- a/_posts/2020-03-14-outils.md
+++ b/_posts/2020-03-14-outils.md
@@ -28,3 +28,8 @@ fa-icon: toolbox
 * Kanban boards :
     * [**Colibris postit**](https://postit.colibris-outilslibres.org) : permet de faire un kanban board ultra minimaliste
     * [**Trello**](https://trello.com/) 
+
+* Quizz : 
+    * [Kahoot](https://kahoot.com/)
+    * [H5P](https://h5p.org/)
+    * [Quizzoodle](http://quizzoodle.com/)
